[MODEXPW-225] Fixed code smells